# api/swagger/swagger.yaml
@@ -14,6 +14,7 @@ schemes:
 # format of bodies a client can send (Content-Type)
 consumes:
   - application/json
+  - application/x-www-form-urlencoded
 # format of the responses to the client (Accepts)
 produces:
   - application/json
@@ -22,12 +23,63 @@ paths:
     x-swagger-router-controller: classes
     get:
       description: 클래스 목록 요청
-      operationId: classes
+      operationId: getClasses
       responses:
         "200":
           description: Success
           schema:
             $ref: "#/definitions/ClassesGetResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: 클래스 생성
+      operationId: postClass
+      parameters: [
+        {
+          name: 'name',
+          in: 'formData',
+          description: '클래스 이름',
+          required: true,
+          type: 'string',
+        }, {
+          name: 'capacity',
+          in: 'formData',
+          description: '수업 참여 가능 정원',
+          required: true,
+          type: 'string',
+        }, {
+          name: 'level',
+          in: 'formData',
+          description: '수업 레벨',
+          required: true,
+          type: 'string',
+        }, {
+          name: 'location',
+          in: 'formData',
+          description: '수업 장소',
+          required: true,
+          type: 'string',
+        }, {
+          name: 'timetable',
+          in: 'formData',
+          description: '수업 시간표',
+          required: true,
+          type: 'string',
+        }, {
+          name: 'teacher_id',
+          in: 'formData',
+          description: '선생님 id',
+          required: true,
+          type: 'string',
+        }
+      ]
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/ClassesPostResponse"
         default:
           description: Error
           schema:
@@ -62,6 +114,12 @@ paths:
 definitions:
   ClassesGetResponse:
     type: object
+  ClassesPostResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
   HelloWorldResponse:
     required:
       - message
